eks/ingress/ingress-nginx/jun-service,deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jun-deploy1
  namespace: junnginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jundeploy1
  template:
    metadata:
      labels:
        app: jundeploy1
    spec:
      containers:
      - name: juntainer1
        image: junisduck/image_test:junisduck-latest
        ports:
          - containerPort: 8318
---

apiVersion: v1
kind: Service
metadata:
  namespace: junnginx
  name: jun-svc1
spec:
  ports:
  - name: jun-svc-port
    port: 8318
    targetPort: 8318
  selector:
    app: jundeploy1
