eks/ingress/ingress-nginx/jun-service,deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jun-deploy2
  namespace: junnginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jundeploy2
  template:
    metadata:
      labels:
        app: jundeploy2
    spec:
      containers:
      - name: juntainer2
        image: junisduck/image_test:junisduck-latest
        ports:
          - containerPort: 8318
---

apiVersion: v1
kind: Service
metadata:
  namespace: junnginx
  name: jun-svc2
spec:
  ports:
  - name: jun-svc-port
    port: 8318
    targetPort: 8318
  selector:
    app: jundeploy2
