eks/ingress/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx 
  namespace: junnginx # 네임스페이스
  annotations:
    kubernetes.io/ingress.class: "nginx" # 사용할 Ingress Controller
spec:
  rules:
    - http:
        paths:
          - path: /jun1
            pathType: Prefix
            backend:
              service:
                name: jun-svc1 # 트래픽을 라우팅할 서비스
                port:
                  number: 8318
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jun-svc2
                port:
                  number: 8318
                  #        - path: /jun3
                  #          pathType: Prefix
                  #          backend:
                  #            service:
                  #              name: jun-svc3
                  #              port:
                  #                number: 80
